# nautobot-app-dns-models

./: .cookiecutter.json  .gitignore  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py  temp.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  upstream_testing.yml
changes/: +.housekeeping  100.fixed  102.fixed  113.added  119.fixed  120.fixed  122.added  123.changed  13.added  130.fixed  131.removed  135.fixed  139.fixed  141.added  141.breaking  141.changed  144.removed  158.fixed  161.fixed  162.added  162.fixed  170.fixed  178.fixed  179.fixed  181.changed  182.changed  183.added  188.fixed  192.fixed  194.housekeeping  195.added  206.changed  207.documentation  45.fixed  52.fixed  53.added  53.fixed  53.housekeeping  55.changed  58.housekeeping  (+10 more)
development/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.mysql.yml  nautobot_config.py  towncrier_template.j2
dns_models/: __init__.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
dns_models/api/: __init__.py  serializers.py  urls.py  views.py
dns_models/tests/: fixtures.py  test_api_views.py  test_filter_dnszonemodel.py  test_form_dnszonemodel.py  test_model_dnszonemodel.py  test_views.py
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_0.2.md  version_1.0.md  version_1.1.md  version_1.2.md  version_1.3.md  version_2.0.md  version_2.1.md
docs/dev/: contributing.md  dev_environment.md  extending.md  release_checklist.md
docs/dev/code_reference/: api.md  package.md
docs/models/: aaaarecord.md  aaaarecordmodel.md  arecord.md  arecordmodel.md  cnamerecord.md  dnsrecord.md  dnsrecordmodel.md  dnsregistrar.md  dnsregistration.md  dnsview.md  dnsviewprefixassignment.md  dnszone.md  dnszonemodel.md  mxrecord.md  mxrecordmodel.md  nsrecord.md  ptrrecord.md  srvrecord.md  txtrecord.md  txtrecordmodel.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  external_interactions.md  faq.md
nautobot_dns_models/: __init__.py  filters.py  forms.py  jobs.py  models.py  navigation.py  signals.py  tables.py  template_code.py  template_content.py  urls.py  views.py
nautobot_dns_models/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
nautobot_dns_models/migrations/: 0001_initial.py  0002_auto_20230803_1849.py  0002_auto_20240731_2216.py  0003_alter_aaaarecordmodel_address_and_more.py  0003_remove_aaaarecordmodel_ttl_remove_arecordmodel_ttl_and_more.py  0003_remove_dnszonemodel_slug.py  0004_auto_20240801_1129.py  0005_auto_20240801_1136.py  0005_dnsview_alter_dnszone_name_dnsviewprefixassignment_and_more.py  0005_rename_address_aaaarecord_ip_address_and_more.py  0005_rename_address_aaaarecord_ipaddress_and_more.py  0006_aaaarecord_tenant_arecord_tenant_cnamerecord_tenant_and_more.py  0007_dnsregistrar_dnsregistration.py  0007_dnszone_auto_renewal_dnszone_dnssec_enabled_and_more.py  0008_alter_dnsregistration_unique_together.py
nautobot_dns_models/templates/dns_models/: dnszonemodel_retrieve.html
nautobot_dns_models/templates/nautobot_dns_models/: aaaarecordmodel_retrieve.html  arecordmodel_retrieve.html  cnamerecordmodel_retrieve.html  dnszone_retrieve.html  dnszonemodel.html  dnszonemodel_retrieve.html  mxrecordmodel_retrieve.html  nsrecordmodel_retrieve.html  ptrrecordmodel_retrieve.html  txtrecordmodel_retrieve.html
nautobot_dns_models/templates/nautobot_dns_models/inc/: ipaddress_dns_records.html  ipaddress_ptr_records.html
nautobot_dns_models/templatetags/: dns_tags.py
nautobot_dns_models/tests/: __init__.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_filter_dnszonemodel.py  test_filters.py  test_form_dnszonemodel.py  test_forms.py  test_jobs.py  test_model.py  test_model_dnszonemodel.py  test_models.py  test_signals.py  test_views.py
nautobot_dns_models/views/: dnszonemodel.py
